--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     font-family: 'Roboto', sans-serif;
     background-color: #101214;
     color: #7A7C80;
+    line-height: 1.5rem;
 
 }
 
