--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ a{
 .section-2 a{
     display: block;
     padding: 5px;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     padding-left: 0;
 }
 /* animations / utilities */
@@ -95,5 +95,6 @@ a{
         padding-left: 1.5rem;
         padding-top: 2rem;
         padding-bottom: 5rem;
+        width: 90%;
     }
 }
